npr/actualbudget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  ingressClassName: nginx
  rules:
    - host: budget.zasdaym.my.id
      http:
        paths:
          - backend:
              service:
                name: actualbudget
                port:
                  number: 5006
            path: /
            pathType: Prefix
